<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emotech.e_bookshop.fragment.UbahPassFragment"
    android:background="@color/pink">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_lama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_lama"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_baru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_baru"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ulangi_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ulangi_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnregis"
            android:layout_width="194dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:background="@drawable/button_login"
            android:text="@string/btn_ubahakun"
            android:textColor="@color/btn_login" />

    </LinearLayout>
</FrameLayout>